<resources>
    <string name="app_name">DBI Consumer</string>

    <string name="dbi_mpos">DBI mPOS</string>
    <string name="action_settings">Settings</string>
    <string name="action_invoice_list">Invoice List</string>
    <string name="paid">Paid</string>
    <string name="str_date">Date</string>
    <string name="temp_date">10-12-2008</string>

    <!--
    ================================================================================================
    Navigation Items String
    ================================================================================================
    -->

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!--
    ================================================================================================
    Dashboard String
    ================================================================================================
    -->

    <string name="home">Home</string>
    <string name="invoice">Invoice</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="store_name">Store Name</string>
    <string name="store_address">Store Address</string>
    <string name="phone_number">+91- 9992676283</string>
    <string name="date">10/12/2001</string>
    <string name="money">0</string>
    <string name="pending">(Pending)</string>
    <string name="discount">14% off</string>
    <string name="discount_tagline">Discount Tagline</string>
    <string name="trending">Trending</string>
    <string name="item_name">Item Name</string>
    <string name="rupee">50.00</string>
    <string name="add_item">Add</string>
    <string name="rates">Rates</string>
    <string name="generate_qr_code">Generated QR Code</string>
    <string name="scan_customer_code">Please request shopkeeper to scan the above QR code</string>
    <string name="scan_code">Scan Bar Code</string>
    <string name="list">List</string>
    <string name="next">Next</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="my_profile">My Profile</string>
    <string name="address">Address</string>


    <!--
    ================================================================================================
    Authentication String
    ================================================================================================
    -->

    <string name="signin">Sign IN</string>
    <string name="create_account">Create Account</string>
    <string name="create_new_password">Create New Password</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="retype_password">Retype Password</string>
    <string name="ok">Ok</string>


    <!--
    ================================================================================================
    Map Strings
    ================================================================================================
    -->

    <string name="map_not_ready">Map is not ready yet</string>
    <string name="location_permission_denied">This sample requires location permission to enable
        the \'my location\' layer. Please try again and grant access to use the
        location.\nIf the permission has been permanently denied, it can be enabled from the
        System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_location">Access to the location service is required to
        demonstrate the location feature, which shows your current location on the map.</string>


    <!--
    ================================================================================================
    Font-Awesome String
    ================================================================================================
    -->

    <string name="fa_user_o">&#xf007;</string>
    <string name="fa_envelope_o">&#xf0e0;</string>
    <string name="fa_phone">&#xf095;</string>
    <string name="fa_lock_o">&#xf023;</string>
    <string name="fa_home">&#xf015;</string>
    <string name="fa_rupee">&#xf156;</string>
    <string name="fa_fire">&#xf06d;</string>
    <string name="fa_angle_right">&#xf054;</string>
    <string name="fa_plus_circle">&#xf055;</string>
    <string name="fa_globe">&#xf0ac;</string>
    <string name="fa_signout">&#xf08b;</string>
    <string name="fa_city">&#xf278;</string>
    <string name="fa_state">&#xf277;</string>
    <string name="fa_gst">&#xf129;</string>
    <string name="fa_trash">&#xf1f8;</string>
    <string name="fa_shopping_cart">&#xf07a;</string>

    <string name="full_name">Full Name</string>
    <string name="select_your_dbi_store">Select Your DBI Store</string>
    <string name="rewards_point">Rewards Point</string>
    <string name="total_spending">Total Spending</string>
    <string name="bills_uploaded">Bills Uploaded</string>
    <string name="_0">0</string>
    <string name="total_orders">Total Orders</string>
    <string name="unbilled">Unbilled</string>
    <string name="order_summary">Order Summary</string>
    <string name="total_incl_tax">Total (Incl. Tax.)</string>
    <string name="shopping_list">Shopping List</string>

</resources>
