<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_adapter_home_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginTop="15dp"
    android:background="@drawable/selector_item_2"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_store_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@null"
        android:src="@drawable/image_default" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_name" />

        <TextView
            android:id="@+id/text_store_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_address" />

        <TextView
            android:id="@+id/text_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number" />

    </LinearLayout>

</LinearLayout>
