<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginTop="15dp"
    android:background="@drawable/selector_item_2"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/trending_list_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@null"
        android:src="@drawable/image_default" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trending_store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:text="@string/store_name" />

        <TextView
            android:id="@+id/trending_store_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount_tagline" />

    </LinearLayout>

    <View
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/trending_discount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/discount"
        android:textAppearance="?android:textAppearanceMedium" />

</LinearLayout>
