<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:contentDescription="@null"
            android:src="@drawable/logo_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Sign in to your store" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signin_username_font_icon"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fa_gst"
                android:textColor="@color/green"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_signin_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:hint="@string/email"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:shadowColor="@color/orange" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signin_password_font_icon"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/fa_lock_o"
                android:textColor="@color/green"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_signin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:shadowColor="@color/orange" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_signin_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_background"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signin_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/green"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_new_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="New user? Register"
            android:visibility="gone" />


    </LinearLayout>
</ScrollView>
