<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:contentDescription="@null"
            android:src="@drawable/logo_white" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/change_password_font_icon"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fa_lock_o"
                android:textColor="@color/green"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:hint="@string/old_password"
                android:inputType="text"
                android:paddingEnd="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="5dp"
                android:paddingStart="20dp"
                android:shadowColor="@color/orange" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/new_password_font_icon"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fa_lock_o"
                android:textColor="@color/green"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:paddingEnd="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="5dp"
                android:paddingStart="20dp"
                android:shadowColor="@color/orange" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/confirm_password_font_icon"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fa_lock_o"
                android:textColor="@color/green"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingEnd="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="5dp"
                android:paddingStart="20dp"
                android:shadowColor="@color/orange" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm_password_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_background"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
